--- a/index.html
+++ b/index.html
@@ -390,9 +390,9 @@
             et nous trouverons ensemble les solutions les plus adaptées !</p>
             <br><br>
 
-            <div id="monepi">
-            <p class="fontstyle" style="font-size: 2rem; ">
-                Visitez, soutenez une initiative numérique qui me tient à coeur :  <a href="https://monepitaphe.com/" target="_blank"><img src="./img/monepi.png" style="width: 100%;margin: 35px auto 35px auto;"></a>
+            <div id="monepi" data-aos="flip-up">
+            <p class="fontstyle" id="monepi2">
+                Visitez, soutenez   <a href="https://monepitaphe.com/" target="_blank"><img src="./img/monepi.png" style="width: 100%;margin: 35px auto 35px auto;">monepitaphe.com</a><br>une initiative numérique qui me tient à coeur !
         </p></div>
         <!--  FOOTER  -->
         <footer>
