--- a/index.html
+++ b/index.html
@@ -384,15 +384,15 @@
 
 
 
-        <p class="fontstyle" data-aos="zoom-in" data-aos-duration="3000"> Quelque soit votre besoin, votre projet,
+        <p class="fontstyle" data-aos="zoom-in" data-aos-duration="1000"> Quelque soit votre besoin, votre projet,
             n'hésitez
             pas à me contacter, <br>
             et nous trouverons ensemble les solutions les plus adaptées !</p>
             <br><br>
 
-            <div id="monepi" data-aos="flip-up">
+            <div id="monepi" data-aos="flip-up" data-aos-duration="1500">
             <p class="fontstyle" id="monepi2">
-                Visitez, soutenez   <a href="https://monepitaphe.com/" target="_blank"><img src="./img/monepi.png" style="width: 100%;margin: 35px auto 35px auto;">monepitaphe.com</a><br>une initiative numérique qui me tient à coeur !
+                Visitez, soutenez une initiative numérique qui me tient à coeur :  <a href="https://monepitaphe.com/" target="_blank" style="margin-top: 25px;"><img src="./img/monepi.png" style="width: 100%;margin-top: 35px">monepitaphe.com</a><br>
         </p></div>
         <!--  FOOTER  -->
         <footer>
